# stm32flash

./: .gitignore  AUTHORS  Android.mk  HOWTO  I2C.txt  Makefile  Makefile.am  README.md  compiler.h  dev_table.c  i2c.c  init.c  init.h  main.c  parser.h  port.c  port.h  protocol.txt  serial.h  serial_common.c  serial_linux.c  serial_platform.c  serial_posix.c  serial_w32.c  spi.c  stm32.c  stm32.h  stm32flash.1  utils.c
parsers/: Makefile  binary.c  binary.h  hex.c
stm32/: Makefile  crt0.S  linker.ld  stmreset.c  stmreset_binary.c
